scrollbars fixed

--- a/style.css
+++ b/style.css
@@ -87,7 +87,7 @@ section {
 	width: 20%;
 	padding: 0px;
 	margin: 0px;
-	overflow: scroll;
+	overflow: hidden;
 	background-size: cover;
 	background-position: center center;
 	-webkit-transition: all .1s ease-out;
@@ -97,7 +97,7 @@ section:nth-child(n+5){
 }
 .section-mask {
 	background: none;
-	overflow: scroll;
+	overflow: hidden;
 	width: 100%;
 	height: 100%;
 	float: left;
@@ -135,6 +135,9 @@ section:hover .section-content {
 }
 #main.click section.clicked {
 	width: 40%;
+}
+section.clicked .section-mask {
+	overflow-y: scroll;
 }
 /*
 	BLOG
